--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="..\NotAuthorized\whoIsTarls.css" />
-    
+
     <title>Who is tarla?</title>
   </head>
-  <body>
-    <header>
+  <body class="body">
+    <header class="header">
       <ul class="navigation">
-        <li class="li"><a class="link" href="#registration"> Shop</a></li>
-        <li class="li"><a class="link" href="#howItWorks">How it works?</a></li>
-        <li class="li"><a class="link" href="#whoIsTarla">Who is Tarla?</a></li>
+        <li class="li"><a class="link" href="#whoWeAre">Who are we</a></li>
+        <li class="li"><a class="link" href="#ourMessage">Our message</a></li>
+        <li class="li">
+          <a class="link" href="#makeOrder">How to make an order</a>
+        </li>
       </ul>
-  
+
       <button class="day-hught_switcher">
         <img src="..\Images\Day-Night.png" alt="Rectangle.png" />
       </button>
@@ -23,40 +25,87 @@
         <p>Log in</p>
       </div>
     </header>
-    <section>
+    <section id="whoWeAre">
       <h1>Who are we</h1>
     </section>
-    <section>
-      <h1>Our message</h1>
+    <h1>Our message</h1>
+    <section id="ourMessege">      
+      <div>
+        <div>
+          <h3>Customer Health and Well-being First</h3>
+          <p>
+            We are committed to producing products that promote the healthy
+            lifestyles of our customers. All our baking mixes are guaranteed
+            gluten-free and sugar-free, providing optimal dietary solutions for
+            everyone, regardless of their dietary needs.
+          </p>
+        </div>
+        <img src="..\Images\6-3.png" alt="" />
+      </div>
+      <div>
+        <div>
+          <h3>Preserving Nature for Future Generations</h3>
+          <p>
+            We are dedicated to an environmentally responsible approach in
+            everything we do. Our products are not only safe for consumption but
+            also crafted with environmental concerns in mind. We use packaging
+            that is easily biodegradable and recyclable to reduce our footprint
+            on the planet.
+          </p>
+        </div>
+        <img src="Images\6-2.png" alt="" />
+      </div>
+      <div>
+        <div>
+          <h3>Uncompromising Quality</h3>
+          <p>
+            We strive for the highest standards of quality in all aspects of our
+            business. Our products undergo rigorous selection and quality
+            control to ensure that every baking mix bearing the Tarla brand
+            meets our high standards of taste, safety, and ethics.
+          </p>
+        </div>
+        <img src="Images\6-1.png" alt="" />
+      </div>
     </section>
     <h1>How to make an order</h1>
-    <section class="section3">
-        <div class="div3">
-        <img class="img6" src="..\Images\6-1.png" alt="" />
-        <p class="p6_1">Explore Our Selection</p>
-        <p class="p6_2">
-          Begin by perusing our delectable assortment of pastry kits on our user-friendly website. From classic croissants to indulgent eclairs, we have something to satisfy every craving.
+    <section id="makeOrder" class="section3">
+      <div class="div3">
+        <img class="img6" src="..\NotAuthorized\Images\1.png" alt="" />
+        <h3 class="p6_1">Explore Our Selection</h3>
+        <p class="p3">
+          Begin by perusing our delectable assortment of pastry kits on our
+          user-friendly website. From classic croissants to indulgent eclairs,
+          we have something to satisfy every craving.
         </p>
       </div>
       <div class="div3">
-        <img class="img6" src="..\Images\6-2.png" alt="" />
-        <p class="p6_1">Add to Cart</p>
-        <p class="p6_2">
-          Once you've identified the irresistible treats you'd like to indulge in, simply add them to your virtual shopping cart with a click. Take your time to ensure you've selected all your favorites.
+        <img class="img6" src="..\NotAuthorized\Images\2.png" alt="" />
+        <h3 class="p6_1">Add to Cart</h3>
+        <p class="p3">
+          Once you've identified the irresistible treats you'd like to indulge
+          in, simply add them to your virtual shopping cart with a click. Take
+          your time to ensure you've selected all your favorites.
         </p>
       </div>
       <div class="div3">
-        <img class="img6" src="..\Images\6-3.png" alt="" />
-        <p class="p6_1">Proceed to Checkout</p>
-        <p class="p6_3">
-          When you're ready to complete your order, proceed to our secure checkout. Here, you'll enter your delivery details and any special instructions. Rest assured, our checkout process is quick and hassle-free.
+        <img class="img6" src="..\NotAuthorized\Images\3.png" alt="" />
+        <h3>Proceed to Checkout</h3>
+        <p class="p3">
+          When you're ready to complete your order, proceed to our secure
+          checkout. Here, you'll enter your delivery details and any special
+          instructions. Rest assured, our checkout process is quick and
+          hassle-free.
         </p>
       </div>
       <div class="div3">
-        <img class="img6" src="..\Images\6-3.png" alt="" />
-        <p class="p6_1">Confirmation and Preparation</p>
-        <p class="p6_3">
-         After placing your order, you'll receive a confirmation email detailing your purchase. Our skilled team will then spring into action, meticulously preparing your pastry kits with the utmost care. </p>
+        <img class="img6" src="..\NotAuthorized\Images\4.png" alt="" />
+        <h3>Confirmation and Preparation</h3>
+        <p class="p3">
+          After placing your order, you'll receive a confirmation email
+          detailing your purchase. Our skilled team will then spring into
+          action, meticulously preparing your pastry kits with the utmost care.
+        </p>
       </div>
     </section>
   </body>
