fix: change img link< link between pages

--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -63,7 +63,7 @@
                   
     </section>
     <footer class="footer">
-        <div><img src="..\Images\Frame.png" alt="" /></div>
+      <img src="..\Images\Frame.png" alt="logo" />
         <div class="divFooter">
           <div class="PF">
             <p class="Hf">Account</p>
@@ -72,16 +72,20 @@
           </div>
           <div class="PF">
             <p class="Hf" id="howItWorks">Our company</p>
-            <p id="shop"> Shop</p>
-            <a href="..\Tarla\aboutUs.html">Our story</a>
-            <p id="whoIsTarla">Who is Tarla?</p>
-          </div>
+            <ul>
+              <li><a href="..\NotAuthorized\location.html">Location</a></li>
+              <li><a href="..\Tarla\aboutUs.html">Our story</a></li>
+              <li> <a href="..\NotAuthorized\WhoIsTarta.html">Who is Tarla?</a></li>
+            </ul>
+            </div>
           <div class="PF">
             <p class="Hf">Resources</p>
-            <p>FAQ</p>
-            <p>Privacy Policy</p>
-            <p>Terms of Service</p>
-          </div>
+            <ul>
+              <li><a href="..\NotAuthorized\index.html">FAQ</a></li>
+              <li><a href="..\Tarla\aboutUs.html">Privacy Policy</a></li>
+              <li><a href="..\Tarla\aboutUs.html">Terms of Service</a></li>
+            </ul>    
+           </div>
           <div class="PF">
             <p class="Hf">Contacts</p>
             <p>telephone</p>
