feat: add footer

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -29,11 +29,11 @@
       <h1>Who are we</h1>
     </section>
     <h1>Our message</h1>
-    <section id="ourMessege">      
-      <div>
+    <section id="ourMessege" class="section2">      
+      <div class="div2">
         <div>
           <h3>Customer Health and Well-being First</h3>
-          <p>
+          <p class="p2">
             We are committed to producing products that promote the healthy
             lifestyles of our customers. All our baking mixes are guaranteed
             gluten-free and sugar-free, providing optimal dietary solutions for
@@ -42,10 +42,11 @@
         </div>
         <img src="..\Images\6-3.png" alt="" />
       </div>
-      <div>
+      <div class="div2">
+        <img src="..\Images\6-2.png" alt="" />
         <div>
           <h3>Preserving Nature for Future Generations</h3>
-          <p>
+          <p class="p2">
             We are dedicated to an environmentally responsible approach in
             everything we do. Our products are not only safe for consumption but
             also crafted with environmental concerns in mind. We use packaging
@@ -53,22 +54,22 @@
             on the planet.
           </p>
         </div>
-        <img src="Images\6-2.png" alt="" />
+        
       </div>
-      <div>
+      <div class="div2">
         <div>
           <h3>Uncompromising Quality</h3>
-          <p>
+          <p class="p2">
             We strive for the highest standards of quality in all aspects of our
             business. Our products undergo rigorous selection and quality
             control to ensure that every baking mix bearing the Tarla brand
             meets our high standards of taste, safety, and ethics.
           </p>
         </div>
-        <img src="Images\6-1.png" alt="" />
+        <img src="..\Images\6-1.png" alt="" />
       </div>
     </section>
-    <h1>How to make an order</h1>
+    <h1 >How to make an order</h1>
     <section id="makeOrder" class="section3">
       <div class="div3">
         <img class="img6" src="..\NotAuthorized\Images\1.png" alt="" />
@@ -109,4 +110,35 @@
       </div>
     </section>
   </body>
+  <footer class="footer">
+    <img src="..\Images\Frame.png" alt="logo" />
+    <div class="PF">
+      <p class="Hf">Account</p>
+      <p>Sign Up</p>
+      <p>Log In</p>
+    </div>
+    <div class="PF">
+      <p class="Hf" id="howItWorks">Our company</p>
+      <ul>
+        <li><a href="..\NotAuthorized\location.html">Location</a></li>
+        <li><a href="..\Tarla\aboutUs.html">Our story</a></li>
+        <li> <a href="..\NotAuthorized\WhoIsTarta.html">Who is Tarla?</a></li>
+      </ul>
+      </div>
+    <div class="PF">
+      <p class="Hf">Resources</p>
+      <ul>
+        <li><a href="..\NotAuthorized\index.html">FAQ</a></li>
+        <li><a href="..\Tarla\aboutUs.html">Privacy Policy</a></li>
+        <li><a href="..\Tarla\aboutUs.html">Terms of Service</a></li>
+      </ul>    
+     </div>
+    <div class="PF">
+      <p class="Hf">Contacts</p>     
+      <p>telephone</p>
+      <p>Github</p>
+      <p>E-mail</p>
+    </div>
+  </div>
+   </footer>
 </html>
