feat: add new section

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -10,11 +10,10 @@
   <body class="body">
     <header class="header">
       <ul class="navigation">
-        <li class="li"><a class="link" href="#whoWeAre">Who are we</a></li>
+        <li class="li"><a class="link" href="#termsOfService">Terms of Service</a></li>
+        <li class="li"><a class="link" href="#privacyPolicy">Privacy Policy</a></li>
         <li class="li"><a class="link" href="#ourMessage">Our message</a></li>
-        <li class="li">
-          <a class="link" href="#makeOrder">How to make an order</a>
-        </li>
+        <li class="li">          <a class="link" href="#makeOrder">How to make an order</a>        </li>
       </ul>
 
       <button class="day-hught_switcher">
@@ -25,10 +24,7 @@
         <p>Log in</p>
       </div>
     </header>
-    <section id="whoWeAre">
-      <h1>Who are we</h1>
-    </section>
-    <h1>Our message</h1>
+       <h1>Our message</h1>
     <section id="ourMessege" class="section2">      
       <div class="div2">
         <div>
@@ -69,8 +65,9 @@
         <img src="..\Images\6-1.png" alt="" />
       </div>
     </section>
-    <h1 >How to make an order</h1>
-    <section id="makeOrder" class="section3">
+    
+    <h1 id="makeOrder" >How to make an order</h1>
+    <section class="section3">
       <div class="div3">
         <img class="img6" src="..\NotAuthorized\Images\1.png" alt="" />
         <h3 class="p6_1">Explore Our Selection</h3>
@@ -107,6 +104,27 @@
           detailing your purchase. Our skilled team will then spring into
           action, meticulously preparing your pastry kits with the utmost care.
         </p>
+      </div>
+    </section>
+    <section class="section1">
+      <div id="termsOfService" class="div1">
+        <h1>Terms of Service</h1>
+        <ul class="div1">
+          <li>Tarla Company collects personal information such as name, email address, and shipping address solely for the purpose of processing orders and providing customer support. </li>
+          <li>Personal information provided to Tarla Company is used only for order fulfillment, customer communication, and improving our services. </li>
+          <li>We implement industry-standard security measures to protect personal information from unauthorized access, alteration, disclosure, or destruction.</li>
+        <li>Tarla Company may use cookies to enhance user experience and track website usage.</li>
+        </ul>
+      </div>
+      <div id="privacyPolicy" class="div1">
+        <h1>Privacy Policy</h1>
+        <ul class="div1">
+          <li>By accessing or using any services provided by Tarla Company, users agree to be bound by these Terms of Service.</li>
+          <li>While we strive to provide accurate product descriptions and images, Tarla Company does not warrant that product descriptions or other content on our website are accurate, complete, reliable, current, or error-free.</li>
+          <li>Tarla Company will make every effort to ensure timely delivery of orders. However, we are not responsible for delays or issues caused by third-party shipping carriers.</li>
+          <li>Please refer to our Returns and Refunds Policy for information on returning products and requesting refunds.</li>
+          <li>Tarla Company will make every effort to ensure timely delivery of orders. However, we are not responsible for delays or issues caused by third-party shipping carriers.</li>
+        </ul>
       </div>
     </section>
   </body>
