fix: change footer in index.html

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -209,35 +209,20 @@
       <button class="button8"><a href="">Send us a message</a></button>
     </section>
     <script src="changeColor.js"></script>
+    
   </body>
   <footer class="footer">
-    <div><img src="Frame.png" alt="" /></div>
-    <div class="divFooter">
-      <div class="PF">
-        <p class="Hf">Account</p>
-        <p>Sign Up</p>
-        <p>Log In</p>
-      </div>
-      <div class="PF">
-        <p class="Hf" id="howItWorks">Our company</p>
-        <p id="shop">Shop</p>
-        <a href="..\Tarla\aboutUs.html">Our story</a>
-        <p id="whoIsTarla">Who is Tarla?</p>
-      </div>
-      <div class="PF">
-        <p class="Hf">Resources</p>
-        <p>FAQ</p>
-        <p>Privacy Policy</p>
-        <p>Terms of Service</p>
-      </div>
-      <div class="PF">
-        <p class="Hf">Contacts</p>
-        <p>location</p>
-        <p>telephone</p>
-        <p>Github</p>
-        <p>E-mail</p>
-      </div>
+    <div class="icon">
+      <img src="..\Images\phone.png" alt="Telephone">
+      <img src="..\Images\github.png" alt="Github">
+      <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
-    <script src="..\Tarla\swaper.js"></script>
-  </footer>
+<div class="divfooter" > 
+  <a class="link" href="..\Tarla\aboutUs.html">FAQ</a>
+  <a class="link" href="..\Tarla\aboutUs.html">Location</a>
+  <a class="link" href="..\Tarla\catalog.html">Catalog</a>
+  <a class="link" href="..\Tarla\catalog.html">Prices</a>
+</div>
+<script src="..\Tarla\swaper.js"></script>
+  </footer> 
 </html>
