fix: change footer in "WhoisTarla.html"

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="..\NotAuthorized\whoIsTarls.css" />
-
+    <link rel="stylesheet" href="..\NotAuthorized\medialStyleWhoIsTarls.css" />
     <title>Who is tarla?</title>
   </head>
   <body class="body">
@@ -21,7 +21,7 @@
           <li>
             <a class="menu__item" href="#privacyPolicy">Privacy Policy</a>
           </li>
-          <li><a class="menu__item" href="#ourMessage">Our message</a></li>
+          <li><a class="menu__item" href="#ourMessege">Our message</a></li>
           <li class="li">
             <a class="menu__item" href="#makeOrder">How to make an order</a>
           </li>
@@ -30,7 +30,9 @@
           </li>
         </ul>
       </div>
-
+      <a href="..\NotAuthorized\index.html"
+        ><img src="..\Images\Frame.png" alt="logo"
+      /></a>
       <ul class="navigation">
         <li class="li">
           <a class="link" href="#termsOfService">Terms of Service</a>
@@ -52,8 +54,8 @@
         <p>Log in</p>
       </div>
     </header>
-    <h1>Our message</h1>
-    <section id="ourMessege" class="section2">
+    <h2 id="ourMessege">Our message</h1>
+    <section class="section2">
       <div class="div2">
         <div>
           <h3>Customer Health and Well-being First</h3>
@@ -93,7 +95,7 @@
       </div>
     </section>
 
-    <h1 id="makeOrder">How to make an order</h1>
+    <h2 id="makeOrder">How to make an order</h1>
     <section class="section3">
       <div class="div3">
         <img class="img6" src="..\NotAuthorized\Images\1.png" alt="" />
@@ -135,8 +137,8 @@
     </section>
     <section class="section1">
       <div id="termsOfService" class="div1">
-        <h1>Terms of Service</h1>
-        <ul class="div1">
+        <h2>Terms of Service</h1>
+        <ul class="ul1">
           <li>
             Tarla Company collects personal information such as name, email
             address, and shipping address solely for the purpose of processing
@@ -159,8 +161,8 @@
         </ul>
       </div>
       <div id="privacyPolicy" class="div1">
-        <h1>Privacy Policy</h1>
-        <ul class="div1">
+        <h2>Privacy Policy</h1>
+        <ul class="ul1">
           <li>
             By accessing or using any services provided by Tarla Company, users
             agree to be bound by these Terms of Service.
@@ -190,35 +192,17 @@
     </section>
   </body>
   <footer class="footer">
-    <img src="..\Images\Frame.png" alt="logo" />
-    <div class="divFooter">
-      <div class="PF">
-        <p class="Hf">Account</p>
-        <p>Sign Up</p>
-        <p>Log In</p>
-      </div>
-      <div class="PF">
-        <p class="Hf" id="howItWorks">Our company</p>
-        <ul>
-          <li><a href="..\NotAuthorized\location.html">Location</a></li>
-          <li><a href="..\Tarla\aboutUs.html">Our story</a></li>
-          <li><a href="..\NotAuthorized\WhoIsTarta.html">Who is Tarla?</a></li>
-        </ul>
-      </div>
-      <div class="PF">
-        <p class="Hf">Resources</p>
-        <ul >
-          <li ><a href="..\NotAuthorized\index.html">FAQ</a></li>
-          <li><a href="..\Tarla\aboutUs.html">Privacy Policy</a></li>
-          <li><a href="..\Tarla\aboutUs.html">Terms of Service</a></li>
-        </ul>
-      </div>
-      <div class="PF">
-        <p class="Hf">Contacts</p>
-        <p>telephone</p>
-        <p>Github</p>
-        <p>E-mail</p>
-      </div>
+    <div class="icon">
+      <img src="..\Images\phone.png" alt="Telephone">
+      <img src="..\Images\github.png" alt="Github">
+      <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
-  </footer>
+<div class="divfooter" > 
+  <a class="link" href="..\NotAuthorized\index.html">Tarla</a>
+  <a class="link" href="..\NotAuthorized\location.html">Location</a>
+  <a class="link" href="..\NotAuthorized\index.html">Facts</a>
+  <a class="link" href="..\NotAuthorized\index.html">How use</a>
+</div>
+<script src="..\Tarla\swaper.js"></script>
+  </footer> 
 </html>
